# frontend

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: color.rs  main.rs  scales.rs
src/application/: acquire.rs  color.rs  data.rs  event.rs  generator.rs  graph.rs  mod.rs  model.rs  panel.rs  signal.rs  trigger.rs  widget.rs
src/application/acquire/: input.rs  mod.rs  signal.rs  widget.rs
src/application/acquire/input/: mod.rs  model.rs  signal.rs  widget.rs
src/application/generator/: mod.rs  model.rs  output.rs  signal.rs  widget.rs
src/application/generator/output/: model.rs  signal.rs  widget.rs
src/application/graph/: mod.rs  signal.rs  widget.rs
src/application/graph/level/: mod.rs  model.rs  placeholder.rs  signal.rs  widget.rs
src/application/graph/level/placeholder/: mod.rs  signal.rs  widget.rs
src/application/trigger/: channel.rs  edge.rs  mod.rs  mode.rs  model.rs  signal.rs  widget.rs
src/backend/: mod.rs
src/redpitaya/: mod.rs
src/widget/: mod.rs  palette.rs  precise.rs  radio.rs
