[package]
name = "yellow-pitaya"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2024"

[dependencies]
envir = "1.2"
log = "0.4"
redpitaya-scpi = "0.27"
relm4 = "0.10"
relm4-components = "0.10"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.gtk]
package = "gtk4"
version = "0.10"

[dependencies.tokio]
version = "1.42"
features = ["time"]
